<resources>
    <string name="app_name">LoginApp</string>
    <string name="facebook_app_id" translatable="false">593607785958442</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">56789</string>
    <string name="client_id" translatable="false">866952567928598</string>    <!--instagram app id from website-->
    <string name="redirect_url" translatable="false">https://api.instagram.com/oauth/authorize?client_id=866952567928598,&amp;redirect_uri=https://www.instagram.com/,&amp;response_type=code,&amp;scope=user_profile,user_media</string>
    <string name="base_url" translatable="false">https://api.instagram.com/</string>
    <string name="get_user_info_url" translatable="false">https://api.instagram.com/v1/users/self/?access_token=</string>

    <string name="CHANNEL_NAME" translatable="false">NIRAV</string>
    <string name="CHANNEL_ID" translatable="false">NGN</string>
    <string name="CHANNEL_DESCRIPTION" translatable="false">GIRNARI</string>


    <string name="e_mail_address">E-mail Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_login_with">Or Login With</string>

    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile No</string>
    <string name="password_register">Password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="login_here">Login Here</string>
    <string name="or_register_with">Or Register With</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter">ENTER</string>
    <string name="current_location">Current Location</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="address">Address :</string>
    <string name="get_current_location">Get Location</string>
    <string name="get_location_on_map">Get Location on Map</string>
    <string name="enter_text">Enter text</string>
    <string name="generate_qr_code">GENERATE QR CODE</string>
    <string name="qr_scanner">QR SCANNER</string>
    <string name="camera">CAMERA</string>
    <string name="save">SAVE</string>
    <string name="qr_and_camera">QR AND CAMERA</string>
    <string name="location">LOCATION</string>
    <string name="push_notification">PUSH NOTIFICATION</string>
    <string name="title_activity_dashboard_p9" translatable="false"></string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">User Name</string>

    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_order" translatable="false">Order</string>
    <string name="menu_history" translatable="false">Order History</string>
    <string name="menu_favourite" translatable="false">Favourite</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sqlite_connectivity">SQLITE CONNECTIVITY</string>
    <string name="empname">Enter Name</string>
    <string name="empsurname">Enter Surname</string>
    <string name="emppost">Enter Designation</string>
    <string name="empdob">Enter Date of Birth</string>
    <string name="empjoiningdate">Enter Joining Date</string>
    <string name="empsalary">Enter Salary</string>
    <string name="empaddress">Enter Address</string>
    <string name="empcity">Enter City</string>
    <string name="insertbutton">Add Employee</string>
    <string name="empid">Enter Id</string>
    <string name="updatebutton">Update</string>
    <string name="apply">Apply</string>
    <string name="insertContactbutton">Add Contact Details</string>
    <string name="empcontactid">Enter Employee Id</string>
    <string name="empmobileno">Enter Mobile No</string>
    <string name="empemailid">Enter Email Id</string>
    <string name="insertContactbutton2">Add</string>
    <string name="dialog">Dialog Box</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Algorithm</string>

    <string-array name="markArray11">
        <item>800</item>
        <item>2000</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>