<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage2"
    tools:context=".SQLite_Update_Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update Employee Details"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
    <EditText
        android:id="@+id/edtUpdateID"
        android:layout_width="350dp"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:background="@drawable/editext_design2"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/empid"
        android:textColorHint="@color/lightyellow"
        app:layout_constraintTop_toBottomOf="@+id/appbarlayout4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtEmpName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:layout_marginTop="12dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:background="@drawable/editext_design2"
        android:ems="10"
        android:hint="@string/empname"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:textColor="@color/yellow"
        android:textColorHint="@color/lightyellow"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUpdateID" />

    <EditText
        android:id="@+id/editEmpSurname"
        android:layout_width="350dp"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:background="@drawable/editext_design2"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/empsurname"
        android:textColorHint="@color/lightyellow"
        app:layout_constraintTop_toBottomOf="@+id/edtEmpName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"/>
    <Spinner
        android:id="@+id/editEmpPost"
        android:layout_width="350dp"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:background="@drawable/editext_design2"
        android:ems="10"
        android:textColorHint="@color/lightyellow"
        app:layout_constraintTop_toBottomOf="@+id/editEmpSurname"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/editEmpDOB"
        android:layout_width="350dp"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:background="@drawable/editext_design2"
        android:ems="10"
        android:inputType="none"
        android:focusable="false"
        android:hint="@string/empdob"
        android:textColorHint="@color/lightyellow"
        app:layout_constraintTop_toBottomOf="@+id/editEmpPost"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/editEmpJoiningDate"
        android:layout_width="350dp"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:background="@drawable/editext_design2"
        android:ems="10"
        android:inputType="none"
        android:focusable="false"
        android:hint="@string/empjoiningdate"
        android:textColorHint="@color/lightyellow"
        app:layout_constraintTop_toBottomOf="@+id/editEmpDOB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/editEmpSalary"
        android:layout_width="350dp"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:background="@drawable/editext_design2"
        android:ems="10"
        android:inputType="phone"
        android:digits="0123456789"
        android:hint="@string/empsalary"
        android:textColorHint="@color/lightyellow"
        app:layout_constraintTop_toBottomOf="@+id/editEmpJoiningDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/editEmpAddress"
        android:layout_width="350dp"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:background="@drawable/editext_design2"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789,- "
        android:hint="@string/empaddress"
        android:textColorHint="@color/lightyellow"
        app:layout_constraintTop_toBottomOf="@+id/editEmpSalary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"/>
    <EditText
        android:id="@+id/editEmpCity"
        android:layout_width="350dp"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:background="@drawable/editext_design2"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/empcity"
        android:textColorHint="@color/lightyellow"
        app:layout_constraintTop_toBottomOf="@+id/editEmpAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="15dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/UpdateButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/editext_design3"
        android:text="@string/updatebutton"
        android:textColor="@color/white"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editEmpCity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>