<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome_Main">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:background="#e3e6e4">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/QR_AND_CAMERA"
        android:layout_width="350dp"
        android:layout_margin="15dp"
        android:background="@drawable/editext_design3"
        android:text="@string/qr_and_camera"
        android:textSize="17dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbarlayout4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LOCATION"
        android:layout_width="350dp"
        android:layout_margin="15dp"
        android:background="@drawable/editext_design3"
        android:text="@string/location"
        android:textSize="17dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QR_AND_CAMERA" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PUSH_NOTIFICATION"
        android:layout_width="350dp"
        android:layout_margin="15dp"
        android:background="@drawable/editext_design3"
        android:text="@string/push_notification"
        android:textSize="17dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LOCATION" />

</androidx.constraintlayout.widget.ConstraintLayout>