<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage2"
    tools:context=".PushNotoficationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:background="#e3e6e4">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="350dp"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:textColor="@color/yellow"
        android:background="@drawable/editext_design2"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title"
        android:textColorHint="@color/yellow"
        app:layout_constraintTop_toBottomOf="@+id/appbarlayout2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/editext_design2"
        android:hint="@string/description"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/EnterButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/editext_design3"
        android:text="@string/enter"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>