<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage2"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registration"
                android:textSize="30dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/image1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/p9smalllogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbarlayout2"/>

    <EditText
        android:id="@+id/edittextemailaddress"
        android:layout_width="350dp"
        android:layout_margin="15dp"
        android:hint="@string/email_address"
        android:textColor="@color/yellow"
        android:textColorHint="@color/lightyellow"
        android:paddingLeft="15dp"
        android:layout_height="50dp"
        android:background="@drawable/editext_design2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1" />
    <EditText
        android:id="@+id/edittextusername"
        android:layout_width="350dp"
        android:background="@drawable/editext_design2"
        android:paddingLeft="15dp"
        android:textColor="@color/yellow"
        android:textColorHint="@color/lightyellow"
        android:layout_margin="15dp"
        android:hint="@string/username"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextemailaddress" />
    <EditText
        android:id="@+id/edittextmobileno"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@drawable/editext_design2"
        android:textColor="@color/yellow"
        android:textColorHint="@color/lightyellow"
        android:maxLength="10"
        android:hint="@string/mobile_no"
        android:paddingLeft="15dp"
        android:inputType="phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextusername" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etpasswordlayout"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/lightyellow"
            android:layout_margin="15dp"
            android:layout_width="350dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittextmobileno"
            android:layout_height="50dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edittextpassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/editext_design2"
                android:hint="@string/password_register"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="@color/yellow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittextmobileno" />

        </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerbutton"
        android:layout_width="350dp"
        android:layout_margin="15dp"
        android:background="@drawable/editext_design3"
        android:text="@string/register"
        android:textSize="17dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etpasswordlayout" />

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/registerbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/linkforlogin"
            android:layout_width="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/already_have_an_account"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@+id/linkforlogin2"
            app:layout_constraintTop_toBottomOf="@+id/registerbutton" />
        <TextView
            android:id="@+id/linkforlogin2"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/login_here"
            android:textSize="15dp"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="@color/yellow"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@+id/linkforlogin"
            app:layout_constraintTop_toBottomOf="@+id/registerbutton" />
    </LinearLayout>

    <TextView
        android:id="@+id/textviewforregister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/or_register_with"
        android:textColor="@color/yellow"
        android:textSize="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l1" />

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textviewforregister"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/facebooklogo"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/googlelogo"></ImageView>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="1dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/googlelogo"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/facelogo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ImageView>



        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>